--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "migrate:posts": "tsx scripts/migratePostsToSupabase.ts"
+    "migrate:posts": "tsx scripts/migratePostsToSupabase.ts",
+    "migrate:courses": "tsx scripts/migrateCoursesToSupabase.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
